# mysql-leak

./: Cargo.toml  Readme.md  mysqlleak.sql
java-sql/: pom.xml
java-sql/src/main/java/com/leak/: Main.java
rust-sqlx/src/: main.rs
src/: main.rs
test-2hours/: Readme.md  commands.sh
test-2hours/0-before/: count-infoschema-tables.txt  full-processlist.txt  global-status.txt  innodb-engine-status.txt  just-status.txt  meminfo.txt
test-2hours/1-30m/: full-processlist.txt  global-status.txt  innodb-engine-status.txt  just-status.txt
test-2hours/2-1h45m/: full-processlist.txt  global-status.txt  global-variables.txt  innodb-engine-status.txt  just-status.txt
test-2hours/3-2h/: full-processlist.txt  global-status.txt  innodb-engine-status.txt  just-status.txt
